adding pools to mock

--- a/Resources/assets/less/Documents.less
+++ b/Resources/assets/less/Documents.less
@@ -8,3 +8,13 @@
   background: none!important;
   color: rgba(0,0,0,.95)!important;
 }
+
+.ui.vertical.menu.filepools {
+
+  .item>i.icon {
+    float: none;
+    margin: inherit;
+    padding-right: .28571429em;
+  }
+
+}
