GUI Function: rename Objects

--- a/Assets/css/Documents.css
+++ b/Assets/css/Documents.css
@@ -10,5 +10,22 @@
   margin: inherit;
   padding-right: .28571429em;
 }
+.object .title .text {
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+.object .title .input {
+  display: none;
+}
+.object .title.edit .input {
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  min-width: 50%;
+}
+.object .title.edit .text {
+  display: none;
+}
 
 /*# sourceMappingURL=Documents.css.map */
