--- a/Resources/assets/less/Documents.less
+++ b/Resources/assets/less/Documents.less
@@ -20,19 +20,11 @@
 }
 
 
-.object .title {
-  .text {
+.object {
+  .ui.text {
     display: inline-flex;
   }
-  .input {
-    display: none;
-  }
-
-  &.edit .input {
-    display: inline-flex;
-    min-width: 50%;
-  }
-  &.edit .text {
-    display: none;
+  .ui.input {
+    min-width:50%;
   }
 }
