--- a/Assets/css/Documents.css
+++ b/Assets/css/Documents.css
@@ -1,22 +1,6 @@
-.breadcrumb.filepath a {
-  color: #999;
-}
-.ui.table tbody tr td.selectable:hover {
-  background: none!important;
-  color: rgba(0, 0, 0, 0.95) !important;
-}
-.ui.vertical.menu.filepools .item > i.icon {
-  float: none;
-  margin: inherit;
-  padding-right: .28571429em;
-}
-.object .ui.text {
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-}
-.object .ui.input {
-  min-width: 50%;
+.ui.list.treeview {
+  display: inline-block;
+  width: auto!important;
 }
 
 /*# sourceMappingURL=Documents.css.map */
