--- a/Assets/css/Documents.css
+++ b/Assets/css/Documents.css
@@ -12,11 +12,26 @@
 .ui.segment.fileBrowser .treeView .list.pool {
   margin: 0;
 }
+.ui.segment.fileBrowser .fileView {
+  padding: 0;
+}
 .ui.menu.fileMenu .item > .button {
   margin: -0.5em 0.25em;
 }
 .ui.menu.fileMenu .ui.breadcrumb.item:before {
   display: none;
+}
+#file-list-table {
+  border: none;
+  border-radius: 0;
+}
+#file-list-table .object .ui.text {
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+#file-list-table .object .ui.input {
+  min-width: 50%;
 }
 
 /*# sourceMappingURL=Documents.css.map */
