--- a/Resources/assets/less/Documents.less
+++ b/Resources/assets/less/Documents.less
@@ -37,7 +37,13 @@
   border:none;
   border-radius:0;
 
+  tbody tr td.selectable:hover {
+    background: none!important;
+    color: rgba(0,0,0,.95)!important;
+  }
+
   .object {
+
     .ui.text {
       display: inline-flex;
     }
@@ -45,5 +51,6 @@
     .ui.input {
       min-width: 50%;
     }
+
   }
 }
