switching to webpack

--- a/Resources/assets/less/Documents.less
+++ b/Resources/assets/less/Documents.less
@@ -1,5 +1,4 @@
-@import (reference) '../../themes/societyadmin/semantic/src/definitions/globals/reset';
-@import (reference) '../../themes/societyadmin/semantic/src/definitions/globals/site';
+@import '../../../../../themes/societyadmin/semantic/src/definitions/globals/site.less';
 
 .ui.segment.fileBrowser {
   min-height: 20em;
