--- a/Resources/assets/css/Documents.scss
+++ b/Resources/assets/css/Documents.scss
@@ -1,23 +1,21 @@
 @import "../../../../../themes/societyadmin/variables.scss";
 
-.ui.segment.fileBrowser {
+#fileBrowser {
   padding: 0;
 
+  .container {
+    display: flex;
+  }
   .treeView {
-    margin: 0;
-    padding: 1em;
-    background-color: $white;
-    overflow: hidden;
-    border-right: 1px solid $lightGrey;
-
-    .list.pool {
-      margin: 0;
-    }
+    padding: 0;
+    margin: 0 1em 0 0;
   }
 
   .fileView {
     padding: 0;
+    margin: 0;
     min-height: 20em;
+    width: 100%;
   }
 
 }
